--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 
+title: Alexisspa9blog
 header-img: img/home-bg.png
 email: alexisspa9@gmail.com
 copyright_name: alexisspa9
 description: > # this means to ignore newlines until "baseurl:"
-  
+  My blog
 baseurl: "" # the subpath of your site, e.g. /blog
 twitter_username: 
 github_username:  alexisspa9
